@@ -4769,3 +4769,91 @@ int igraph_avg_nearest_neighbor_degree(const igraph_t *graph,
   
   return 0;
 }
+
+/**
+ * \function igraph_strength
+ * Strength of the vertices, weighted vertex degree in other words
+ * 
+ * In an weighted network the strength of a vertex is the sum of the
+ * weights of all adjacent edges. In a non-weighted networks this is
+ * exactly the vertex degree.
+ * \param graph The input graph.
+ * \param res Pointer to an initialized vector, the result is stored
+ *   here. It will be resized as needed.
+ * \param vids The vertices for which the calculation is performed.
+ * \param mode Gives whether to count only outgoing (\c IGRAPH_OUT),
+ *   incoming (\c IGRAPH_IN) edges or both (\c IGRAPH_ALL).
+ * \param loops A logical scalar, whether to count loop edges as well.
+ * \param weights A vector giving the edge weights. If this is a NULL
+ *   pointer, then \ref igraph_degree() is called to perform the
+ *   calculation.
+ * \return Error code.
+ * 
+ * Time complexity: O(|V|+|E|), linear in the number vertices and
+ * edges.
+ * 
+ * \sa \ref igraph_degree() for the traditional, non-weighted version.
+ */
+
+int igraph_strength(const igraph_t *graph, igraph_vector_t *res,
+		    const igraph_vs_t vids, igraph_neimode_t mode,
+		    igraph_bool_t loops, const igraph_vector_t *weights) {
+  
+  long int no_of_nodes=igraph_vcount(graph);
+  igraph_vit_t vit;
+  long int no_vids;
+  igraph_vector_t neis;
+  long int i;
+
+  if (!weights) {
+    IGRAPH_WARNING("No edge weights for strength calculation, normal degree");
+    return igraph_degree(graph, res, vids, mode, loops);
+  }
+  
+  if (igraph_vector_size(weights) != igraph_ecount(graph)) {
+    IGRAPH_ERROR("Invalid weight vector length", IGRAPH_EINVAL);
+  }
+  
+  IGRAPH_CHECK(igraph_vit_create(graph, vids, &vit));
+  IGRAPH_FINALLY(igraph_vit_destroy, &vit);
+  no_vids=IGRAPH_VIT_SIZE(vit);
+  
+  IGRAPH_VECTOR_INIT_FINALLY(&neis, 0);
+  IGRAPH_CHECK(igraph_vector_reserve(&neis, no_of_nodes));
+  IGRAPH_CHECK(igraph_vector_resize(res, no_vids));
+  igraph_vector_null(res);
+  
+  if (loops) {
+    for (i=0; !IGRAPH_VIT_END(vit); IGRAPH_VIT_NEXT(vit), i++) {
+      long int vid=IGRAPH_VIT_GET(vit);
+      long int j, n;
+      IGRAPH_CHECK(igraph_adjacent(graph, &neis, vid, mode));
+      n=igraph_vector_size(&neis);
+      for (j=0; j<n; j++) {
+	long int edge=VECTOR(neis)[j];
+	VECTOR(*res)[i] += VECTOR(*weights)[edge];
+      }
+    }
+  } else {
+    for (i=0; !IGRAPH_VIT_END(vit); IGRAPH_VIT_NEXT(vit), i++) {
+      long int vid=IGRAPH_VIT_GET(vit);
+      long int j, n;
+      IGRAPH_CHECK(igraph_adjacent(graph, &neis, vid, mode));
+      n=igraph_vector_size(&neis);
+      for (j=0; j<n; j++) {
+	long int edge=VECTOR(neis)[j];
+	long int from=IGRAPH_FROM(graph, edge);
+	long int to=IGRAPH_TO(graph, edge);
+	if (from != to) {
+	  VECTOR(*res)[i] += VECTOR(*weights)[edge];
+	}
+      }
+    }
+  }
+  
+  igraph_vit_destroy(&vit);
+  igraph_vector_destroy(&neis);
+  IGRAPH_FINALLY_CLEAN(2);
+  
+  return 0;
+}
