@@ -1,5 +1,7 @@
 2008-10-27  Gabor Csardi  <csardi@szaffi>
 
+	* src/structural_properties.c (igraph_strength) : added
+
 	* src/structural_properties.c 
 	(igraph_avg_nearest_neighbor_degree) : added
 
